# ChangeLog for dev-ruby/net-ssh
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.77 2010/09/30 01:43:39 ranger Exp $

  30 Sep 2010; Brent Baude <ranger@gentoo.org> net-ssh-2.0.23.ebuild:
  Marking net-ssh-2.0.23 ppc64 for bug 333951

  28 Sep 2010; Brent Baude <ranger@gentoo.org> net-ssh-2.0.23.ebuild:
  Marking net-ssh-2.0.23 ppc for bug 333951

  12 Sep 2010; Raúl Porcel <armin76@gentoo.org> net-ssh-2.0.23.ebuild:
  ia64 stable wrt #333951

  25 Aug 2010; Markos Chandras <hwoarang@gentoo.org> net-ssh-2.0.23.ebuild:
  Stable on amd64 wrt bug #333951

  22 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  net-ssh-2.0.23.ebuild:
  x86 stable wrt bug #333951

  22 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/net-ssh-2.0.17-readpartial.patch, -net-ssh-2.0.21.ebuild,
  -net-ssh-2.0.22.ebuild:
  Remove unused file. Cleanup old versions.

*net-ssh-2.0.23 (05 Jun 2010)

  05 Jun 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.23.ebuild:
  Version bump.

*net-ssh-2.0.22 (21 Apr 2010)

  21 Apr 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.22.ebuild:
  Version bump: bug fix for config parsing.

  21 Apr 2010; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.0.17-r1.ebuild,
  -net-ssh-2.0.19.ebuild, -net-ssh-2.0.20.ebuild:
  Remove old versions.

*net-ssh-2.0.21 (21 Mar 2010)

  21 Mar 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.21.ebuild:
  Version bump with bug fixes. Documentation can now be generated.

  28 Feb 2010; Hans de Graaff <graaff@gentoo.org> -net-ssh-1.1.3.ebuild:
  Remove masked version.

  14 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  net-ssh-2.0.20.ebuild:
  Add Ruby 1.9 support.

*net-ssh-2.0.20 (11 Feb 2010)

  11 Feb 2010; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.20.ebuild:
  Version bump: Support 'ProxyCommand none' directive

  18 Jan 2010; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.0.16.ebuild,