@@ -1,14 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/net-ssh-2.0.15.ebuild,v 1.5 2009/10/31 14:36:20 ranger Exp $
-
-inherit gems
-
-DESCRIPTION="Non-interactive SSH processing in pure Ruby"
-HOMEPAGE="http://net-ssh.rubyforge.org/"
-
-LICENSE="GPL-2"
-SLOT="2"
-KEYWORDS="amd64 ia64 ppc ppc64 x86"
-IUSE=""
-USE_RUBY="ruby18"
