@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/redcloth
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/redcloth/ChangeLog,v 1.51 2010/10/25 02:38:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/redcloth/ChangeLog,v 1.52 2010/11/01 19:16:21 graaff Exp $
+
+  01 Nov 2010; Hans de Graaff <graaff@gentoo.org> -redcloth-4.1.9.ebuild:
+  Remove old version.
 
   25 Oct 2010; Jeroen Roovers <jer@gentoo.org> redcloth-4.2.3-r1.ebuild:
   Marked ~hppa (bug #322175).
